--- a/src/css/Dashboard.module.css
+++ b/src/css/Dashboard.module.css
@@ -7,7 +7,6 @@
     background: #242B2E;
     /* radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%); */
     padding: 10px;
-
 }
 
 .typewriter h1 {
@@ -28,6 +27,11 @@
         blink-caret .5s step-end infinite;
 }
 
+@media screen and (max-width: 600px) {
+    .typewriter h1 {
+        display: none;
+    }
+}
 /* The typing effect */
 @keyframes typing {
     from {
